Fix install button on iOS

--- a/app/main.css
+++ b/app/main.css
@@ -62,7 +62,7 @@ canvas#three-js {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 #overlay {
@@ -282,6 +282,17 @@ canvas#three-js {
 
 #ios-install-info {
   position: absolute;
+  background: rgba(0,0,0,0.5);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#ios-install-info .inner {
   background-color: white;
   color: black;
   font-family: "Inter";
